improve mutation testing for entrollmentcontroller and checkstyle fixes